<resources>
    <string name="app_name"><b>S.A.F. MILKY</b></string>
    <string name="inserisci_email">E-mail</string>
    <string name="inserisci_password">Password</string>
    <string name="button_accedi">Accedi</string>
    <string name="inserisci_e_mail">Inserisci e-mail</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button">Button</string>
    <string name="catalogo">Catalogo</string>
    <string name="info">Informazioni</string>
    <string name="carrello">Carrello</string>
    <string name="area_utente">Area Utente</string>
    <string name="s_a_f_milk_smart_artificial_farming_milky">S.A.F. MILK SMART ARTIFICIAL FARMING MILKY</string>
    <string name="ordini_effettuati">Ordini Effettuati</string>ing>
    <string name="nome_macchinari">Nome Macchinari</string>
    <string name="status">Status</string>
    <string name="confezionatrice">Confezionatrice</string>
    <string name="basso">Basso</string>
    <string name="buono">Buono</string>
    <string name="taglia_pasta">Taglia Pasta</string>
    <string name="alto">Alto</string>
    <string name="revisione">Revisione</string>
    <string name="filatrici">Filatrici</string>
    <string name="costante">Costante</string>
    <string name="guasto">Guasto</string>
    <string name="condizioni_dei_macchinari">Condizioni dei Macchinari</string>
    <string name="ditte_di_manutenzione">Ditte di Manutenzione</string>
    <string name="s_a_f_milky">S.A.F. MILKY</string>
    <string name="smart_artificial_farming_milky">SMART ARTIFICIAL FARMING MILKY</string>
    <string name="rubrica">Rubrica</string>
    <string name="aggiungi_numero">Aggiungi Numero</string>
    <string name="nome_ditta">Nome Ditta</string>
    <string name="hint">hint</string>
    <string name="numero">Numero</string>
    <string name="annulla">Annulla</string>
    <string name="ciao">ciao</string>
    <string name="textclose">textclose</string>
    <string name="textreply">textreply</string>
    <string name="textview01">TextView01</string>
    <string name="textcall">textcall</string>
    <string name="textview">TextView</string>
    <string name="aggiungi_ditta_alla_rubrica">Aggiungi Ditta alla Rubrica</string>
    <string name="aggiungi_numero_alla_rubrica">Aggiungi Numero alla Rubrica</string>
    <string name="scegli_il_contatto_da_rimuovere">Scegli il contatto da rimuovere</string>
    <string name="seleziona_il_contatto_che_vuoi_rimuovere">Seleziona il contatto che vuoi rimuovere</string>
    <string name="rimuovi_il_contatto_dalla_rubrica">Rimuovi il contatto dalla rubrica</string>
    <string name="inserisci_il_nome_della_ditta_da_rimuovere">Inserisci il nome della ditta da rimuovere</string>
    <string name="scrivi_il_nome_del_contatto_da_rimuovere">Scrivi il nome del contatto da rimuovere</string>
    <string name="nome_della_ditta">Nome della ditta</string>
    <string name="spese">Spese</string>
    <string name="fatturato">Fatturato</string>
    <string name="visualizza_contenitori">Visualizza contenitori</string>
    <string name="contenitore_1">Contenitore 1</string>
    <string name="_100_litri">100 litri</string>
    <string name="aggiungi_carrello">Aggiungi al carrello</string>
    <string name="_4_c">4°C</string>
    <string name="_1000_litri">1000 litri</string>
    <string name="elenco_prodotti">Elenco dei prodotti</string>
    <string name="aggiungi_contenitore">Aggiungi Contenitore</string>
    <string name="nome_contenitore">Nome Contenitore</string>
    <string name="litri">Litri</string>
    <string name="gradi">Gradi</string>
    <string name="lista_ordini">Lista Ordini</string>
    <string name="nome_cliente">Nome</string>
    <string name="cognome_cliente">Cognome</string>
    <string name="email_cliente">Email</string>
    <string name="registrazione">Registrazione</string>
    <string name="nomi_dei_dipendenti">Nomi dei dipendenti</string>
    <string name="orari">Orari</string>
    <string name="mansione">Mansione</string>
    <string name="_5_00_13_00">5:00-13:00</string>
    <string name="bancone">Bancone</string>
    <string name="giovanna_rossi">Giovanna Rossi</string>
    <string name="_12_00_20_00">12:00-20:00</string>
    <string name="confezionamento">Confezionamento</string>
    <string name="emanuela_rossi">Emanuela Rossi</string>
    <string name="_8_00_16_00">8:00-16:00</string>
    <string name="produzione">Produzione</string>
    <string name="alessandro_rossi">Alessandro Rossi</string>
    <string name="aggiungi_a_spese">Aggiungi a spese</string>
    <string name="importo">Importo</string>
    <string name="descrizione">Descrizione</string>
    <string name="data_di_scadenza">Data di scadenza</string>
    <string name="aggiungi_la_spesa">Aggiungi la spesa</string>
    <string name="nome">Nome</string>
    <string name="aggiungi_fatturato">Aggiungi il fatturatoa</string>
    <string name="aggiungi_a_fatturato">Aggiungi a fatturato</string>
    <string name="data">Data</string>
    <string name="turni_dei_dipendenti">Turni dei Dipendenti</string>
    <string name="aggiungi_il_contenitore">Aggiungi il contenitore</string>
    <string name="button_registra">Registrati</string>
    <string name="indirizzo_cliente">Indirizzo</string>
    <string name="password_cliente">Password</string>
    <string name="cf_cliente">Codice Fiscale</string>
    <string name="titolo1">Caciocavallo</string>
    <string name="titolo2">Formaggio Parmigiano</string>
    <string name="titolo3">Gorgonzola DOP</string>
    <string name="titolo4">Mozzarella DOP</string>
    <string name="titolo5">Mozzarelline</string>
    <string name="titolo6">Mozzarellona</string>
    <string name="titolo7">Pecorino</string>
    <string name="titolo8">Provolone</string>
    <string name="titolo9">Ricotta di pecora</string>
    <string name="titolo10">Treccia di Mozzarella</string>

</resources>
