<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/logo_deposito"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintBottom_toTopOf="@+id/nome_deposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomucca" />

    <TextView
        android:id="@+id/nome_deposito"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:text="@string/s_a_f_milky"
        android:textColor="#631718"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_deposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_deposito" />

    <TextView
        android:id="@+id/sottotitolo_deposito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="493dp"
        android:gravity="center"
        android:text="@string/smart_artificial_farming_milky"
        android:textColor="#85161E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_deposito" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_deposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_deposito"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/elenco_prodotti"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sottotitolo_deposito" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <ScrollView
            android:layout_width="300dp"
            android:layout_height="275dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:background="@drawable/scroll_color">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/prodotto1"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo1"/>

                <Button
                    android:id="@+id/prodotto2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo2"/>

                <Button
                    android:id="@+id/prodotto3"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo3"/>

                <Button
                    android:id="@+id/prodotto4"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo4"/>

                <Button
                    android:id="@+id/prodotto5"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo5"/>

                <Button
                    android:id="@+id/prodotto6"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo6"/>

                <Button
                    android:id="@+id/prodotto7"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo7"/>

                <Button
                    android:id="@+id/prodotto8"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo8"/>

                <Button
                    android:id="@+id/prodotto9"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo9"/>

                <Button
                    android:id="@+id/prodotto10"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_color"
                    android:text="@string/titolo10"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/barra_botton1"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_catalogo1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#868686"
            android:text="@string/catalogo"
            android:textColor="#ffffff"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_info1"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/info"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_carrello1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/carrello"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_utente1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/area_utente"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ordini1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/ordini_effettuati"
            android:textSize="10sp"
            android:textStyle="bold" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>