<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_contenitore"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintBottom_toTopOf="@+id/nome_contenitore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomucca" />

    <TextView
        android:id="@+id/nome_contenitore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:text="@string/s_a_f_milky"
        android:textColor="#631718"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_contenitore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_contenitore" />

    <TextView
        android:id="@+id/sottotitolo_contenitore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/smart_artificial_farming_milky"
        android:textColor="#85161E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_contenitore" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_contenitore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_contenitore"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/nome_prodotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenitore_1"
        android:textColor="#D81B60"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sottotitolo_contenitore"/>

    <ImageView
        android:id="@+id/immagine_prodotto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_contenitore"/>

    <TextView
        android:id="@+id/descrizione_prodotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000_litri"
        android:textColor="#F8000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/immagine_prodotto" />

    <TextView
        android:id="@+id/prezzo_prodotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_4_c"
        android:textColor="#FA000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrizione_prodotto"/>

    <Button
        android:id="@+id/aggiungi_carrello"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:background="#868686"
        android:text="@string/aggiungi_carrello"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_prodotto"/>

    <LinearLayout
        android:id="@+id/barra_botton9"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_catalogo1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#868686"
            android:text="@string/catalogo"
            android:textColor="#ffffff"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_info1"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/info"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_carrello1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/carrello"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_utente1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/area_utente"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ordini1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/ordini_effettuati"
            android:textSize="10sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

