<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/logo_rubrica"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintBottom_toTopOf="@+id/nome_rubrica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomucca" />

    <TextView
        android:id="@+id/nome_rubrica"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:text="@string/s_a_f_milky"
        android:textColor="#631718"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_rubrica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_rubrica" />

    <TextView
        android:id="@+id/sottotitolo_rubrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/smart_artificial_farming_milky"
        android:textColor="#85161E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_Rubrica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_rubrica" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/sottotitolo_rubrica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_rubrica"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:id="@+id/barra_botton1"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_catalogo6"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/catalogo"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_info6"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/info"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_carrello6"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/carrello"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_utente6"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#E9716A"
            android:text="@string/area_utente"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ordini6"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:backgroundTint="#868686"
            android:textColor="#ffffff"
            android:text="@string/ordini_effettuati"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_Rubrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="150dp"
        android:text="@string/ordini"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sottotitolo_rubrica" />




</androidx.constraintlayout.widget.ConstraintLayout>